syntax = "proto3";

package CameraServer;

enum PortNumbers {
  Unused = 0;
  CameraServerPort = 28962;
}

// The CameraServerGrpc service definition.
service GrpcChannel {
  // Sends an image
  rpc RequestImage (ImageRequest) returns (ImageReply) {}
}

// Specify image cropping behavior
message ImageCropPercents {
  float hOffset = 1;
  float vOffset = 2;
  float width = 3;
  float height = 4;
}

// The request message
message ImageRequest {
  string cameraHardwareId = 1;
  ImageCropPercents imageCropPercents = 2;
}

// Error is an empty string for success
message ImageReply {
  string error = 1;
  bytes fullImage = 2;
  bytes smallImage = 3;
}